# ecal-table

./: .gitignore  README.md  core.h  core.py  rec.py  rec_et.py  snd.py  snd_et.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
example/: rec.py  rec_cb.py  snd.py
example/cpp/: CMakeLists.txt  rec.cpp  rec_cb.cpp  snd.cpp
example/py/: client.py  rec.py  rec_cb.py  server.py  snd.py
proto/: __init__.py  basic_pb2.py  capture_pb2.py  example_pb2.py  gen.sh
proto/cpp/: basic.pb.cc  basic.pb.h  example.pb.cc  example.pb.h
proto/py/: basic_pb2.py
proto/src/: basic.proto  capture.proto  example.proto
